--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <head>
   <meta charset="utf-8">
   <title>Better</title>
-  <link rel="stylesheet" type="text/css" href="https://DanCouper.github.io/Bettest/app.css">
-  <script src="https://DanCouper.github.io/Bettest/vendor.js"></script>
-  <script src="https://DanCouper.github.io/Bettest/app.js"></script>
+  <link rel="stylesheet" type="text/css" href="http://dancouper.github.io/Bettest/app.css">
+  <script src="http://dancouper.github.io/Bettest/vendor.js"></script>
+  <script src="http://dancouper.github.io/Bettest/app.js"></script>
   <script>require('initialize');</script>
-
 </head>
 <body>
   <div id="root"></div>
